Bug 132576 - Template Dialog Category names are not intuitive
Summary: Template Dialog Category names are not intuitive
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:7.5.0
Keywords:
: 151154 (view as bug list)
Depends on:
Blocks: Template-Manager
  Show dependency treegraph
 
Reported: 2020-05-01 09:09 UTC by andreas_k
Modified: 2022-10-01 16:29 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2020-05-01 09:09:06 UTC
The Template category names are:
- My Templates
- Business Correspondence
- Other Business Documents
- Personal Correspondence and Documents
- Forms and Contracts
- Finances
- Education
- Presentation Backgrounds
- Presentations
- Miscellaneous
- Labels
- Styles
Comment 1 andreas_k 2020-05-01 09:15:29 UTC
What's the difference between
- Business Correspondence
- Other Business Documents
- Personal Correspondence and Documents (very long title)

I would suggest to use the categories from https://extensions.libreoffice.org/templates

but as we have now only a view templates I suggest to simplyfy all the categories.
Comment 2 Heiko Tietze 2020-05-07 14:05:59 UTC
(In reply to andreas_k from comment #1)
> I would suggest to use the categories from
> https://extensions.libreoffice.org/templates

These categories are obsolete. But it might be the basis for your proposal, which is welcome.
Comment 3 Heiko Tietze 2020-05-14 07:28:42 UTC
Categories on the old extensions site are tags with multi-select option meaning you can place a template in many "categories". The internal feature works as a filter.
In detail:
+ Accounting, Budget, Invoice -> just a minor difference between the three; would ake "Accounting"
+ Book, E-book, Conference, Brochure / Pamphlet, Magazine -> all kind of "Publication"
+ Education, Academia, Science, Elementary/Secondary school panels -> would take "Education/Academia"
+ "Curriculum Vitae" and "Letter" are sensible topics too

In principle, extensions can use different tags and extend the categories (assuming this, not tested - would be relevant for the tight integration project @Yusuf). So better starts with not too many.
Comment 4 Emma Watson 2020-12-22 06:36:14 UTC Comment hidden (spam)
Comment 5 Guerra 2021-05-05 20:06:56 UTC Comment hidden (spam)
Comment 6 john regry 2021-11-01 14:02:58 UTC Comment hidden (spam)
Comment 7 Heiko Tietze 2022-09-26 08:28:22 UTC
*** Bug 151154 has been marked as a duplicate of this bug. ***
Comment 8 Rafael Lima 2022-09-26 12:16:19 UTC
(In reply to andreas_k from comment #0)
> The Template category names are:
> - My Templates
(...)

Not all of these styles are available for selecting in the Templates Manager. Only the ones whose associated directory have templates on it.

From the explanation in bug 151154, [1] defines the short template category names that map directory templates into full category names (defined in [2]).

[1] core/sfx2/source/doc/doctemplates.cxx

[2] core/sfx2/inc/doctempl.hrc

One thing we could do is remove the "default" categories defined in [2] that are no longer used in the default installation of LibreOffice. These are:
- Finances
- Education
- Presentation Backgrounds
- Miscellaneous
- Labels

Note that the labels above are not reachable neither via the Templates Manager nor via the Save As Template dialog.

From attachment 182651 [details] (bug 151154) we also need to define a localizable name for the "draw" category, which is actually the name of the directory where the template is located and it does not have an associated full category name. I created a patch for this specific issue (it is still referencing the duplicate bug 151154, but I'll fix it in an upcoming patchet).

https://gerrit.libreoffice.org/c/core/+/140506

If you agree, I can include in this patch the removal of the unused categories listed above.
Comment 9 Heiko Tietze 2022-09-28 09:10:30 UTC
(In reply to Rafael Lima from comment #8)
> If you agree, I can include in this patch the removal of the unused
> categories listed above.

Better separate the patches. But would be nice to fix both. Ask, if you need input for the labels.
Comment 10 Commit Notification 2022-09-28 16:52:43 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/03809a4338f4a1e9e5ad5088fdeedc4c3fe0f7b5

Related tdf#132576 Fix "draw" string in Template Manager and make it translatable

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2022-10-01 16:29:11 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5cf31e332ed835fd1755bda133cee7bbc328dc09

tdf#132576 Remove unused template categories

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.