tdf#132576 Update Template categories

Change-Id: Iead2136eeebb83448d14356909a0e50064a4c3f2