sfx2/source/doc/doctemplates.cxx
@@ -491,6 +491,7 @@ const char* TEMPLATE_SHORT_NAMES_ARY[] =
     "presnt",
     "misc",
     "labels"
+    "draw"
 };
 
 void SfxDocTplService_Impl::readFolderList()
